--- a/bankU4/composer.json
+++ b/bankU4/composer.json
@@ -3,7 +3,8 @@
     "description": "BankU4",
     "autoload": {
         "psr-4": {
-            "BankU4\\": ""
+            "BankU4\\": "",
+            "": ""
         }
     },
     "authors": [
