--- a/zooPark/composer.json
+++ b/zooPark/composer.json
@@ -2,6 +2,7 @@
     "name": "klumb/zoo-park",
     "autoload": {
         "psr-4": {
+            "App\\DB\\": "App/DB/",
             "ZooPark\\": ""
         }
     },
