--- a/calendar/package.json
+++ b/calendar/package.json
@@ -14,5 +14,8 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.77.7",
     "sass-loader": "^12.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3"
   }
 }
